force-app/main/default/objects/Education__c/fields/Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Contact_Title__c</fullName>
    <defaultValue>&quot;School Official&quot;</defaultValue>
    <label>Contact Title</label>
    <length>60</length>
    <type>Text</type>
</CustomField>