force-app/main/default/objects/Education__c/fields/Current_Grade__c.field-meta.xml
<CustomField>
    <fullName>Current_Grade__c</fullName>
    <label>Current Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Kindergarten</fullName>
            </value>
            <value>
                <fullName>First grade</fullName>
            </value>
            <value>
                <fullName>Second grade</fullName>
            </value>
            <value>
                <fullName>Third grade</fullName>
            </value>
            <value>
                <fullName>Fourth grade</fullName>
            </value>
            <value>
                <fullName>Fifth grade</fullName>
            </value>
            <value>
                <fullName>Sixth grade</fullName>
            </value>
            <value>
                <fullName>Seventh grade</fullName>
            </value>
            <value>
                <fullName>Eight grade</fullName>
            </value>
            <value>
                <fullName>Ninth grade</fullName>
            </value>
            <value>
                <fullName>Tenth grade</fullName>
            </value>
            <value>
                <fullName>Eleventh grade</fullName>
            </value>
            <value>
                <fullName>Twelfth grade</fullName>
            </value>
            <value>
                <fullName>GED</fullName>
            </value>
            <value>
                <fullName>Post-secondary</fullName>
            </value>
            <value>
                <fullName>College</fullName>
            </value>
            <value>
                <fullName>Not school-age</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>