force-app/main/default/objects/Education__c/fields/Does_the_child_have_an_IEP__c.field-meta.xml
<CustomField>
    <fullName>Does_the_child_have_an_IEP__c</fullName>
    <label>Does the child have an IEP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>