force-app/main/default/objects/Education__c/fields/Education_Program__c.field-meta.xml
<CustomField>
    <fullName>Education_Program__c</fullName>
    <label>Education Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not enrolled</fullName>
            </value>
            <value>
                <fullName>Not school-age</fullName>
            </value>
            <value>
                <fullName>Elementary school</fullName>
            </value>
            <value>
                <fullName>Secondary school</fullName>
            </value>
            <value>
                <fullName>Post-secondary education or training - Full Time</fullName>
            </value>
            <value>
                <fullName>Post-secondary education or training - Part Time</fullName>
            </value>
            <value>
                <fullName>College - Full time</fullName>
            </value>
            <value>
                <fullName>College - Part time</fullName>
            </value>
            <value>
                <fullName>College / University</fullName>
                <isActive>false</isActive>
                <label>College / University</label>
            </value>
            <value>
                <fullName>GED</fullName>
                <isActive>false</isActive>
                <label>GED</label>
            </value>
            <value>
                <fullName>Home and Hospital</fullName>
                <isActive>false</isActive>
                <label>Home and Hospital</label>
            </value>
            <value>
                <fullName>Infant and Toddler</fullName>
                <isActive>false</isActive>
                <label>Infant and Toddler</label>
            </value>
            <value>
                <fullName>Not in School</fullName>
                <isActive>false</isActive>
                <label>Not in School</label>
            </value>
            <value>
                <fullName>Other (Specify)</fullName>
                <isActive>false</isActive>
                <label>Other (Specify)</label>
            </value>
            <value>
                <fullName>Pre-School/Head Start</fullName>
                <isActive>false</isActive>
                <label>Pre-School/Head Start</label>
            </value>
            <value>
                <fullName>Regular</fullName>
                <isActive>false</isActive>
                <label>Regular</label>
            </value>
            <value>
                <fullName>Special Ed</fullName>
                <isActive>false</isActive>
                <label>Special Ed</label>
            </value>
            <value>
                <fullName>Trade School</fullName>
                <isActive>false</isActive>
                <label>Trade School</label>
            </value>
            <value>
                <fullName>Type III</fullName>
                <isActive>false</isActive>
                <label>Type III</label>
            </value>
            <value>
                <fullName>Unknown</fullName>
                <isActive>false</isActive>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>Vocational/ Technical Training</fullName>
                <isActive>false</isActive>
                <label>Vocational/ Technical Training</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>