force-app/main/default/objects/Education__c/fields/Is_the_child_on_grade_level__c.field-meta.xml
<CustomField>
    <fullName>Is_the_child_on_grade_level__c</fullName>
    <label>Is the child on grade level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>