force-app/main/default/objects/Education__c/fields/School_Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>School_Contact_Last_Name__c</fullName>
    <label>School Contact Last Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>