force-app/main/default/objects/Education__c/fields/School_Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>School_Entry_Date__c</fullName>
    <label>School Entry Date</label>
    <type>Date</type>
</CustomField>