force-app/main/default/objects/Education__c/fields/School_Exit_Date__c.field-meta.xml
<CustomField>
    <fullName>School_Exit_Date__c</fullName>
    <label>School Exit Date</label>
    <type>Date</type>
</CustomField>