force-app/main/default/objects/Education__c/fields/School_Exit_Reason__c.field-meta.xml
<CustomField>
    <fullName>School_Exit_Reason__c</fullName>
    <label>School Exit Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Graduated</fullName>
            </value>
            <value>
                <fullName>Promoted</fullName>
            </value>
            <value>
                <fullName>Moved</fullName>
            </value>
            <value>
                <fullName>Drop out</fullName>
            </value>
            <value>
                <fullName>Changed schools</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>