force-app/main/default/objects/Education__c/fields/State_Assigned_Student_Identifier_SASID__c.field-meta.xml
<CustomField>
    <fullName>State_Assigned_Student_Identifier_SASID__c</fullName>
    <label>Student State ID number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>