force-app/main/default/objects/Education__c/fields/Type_of_Class__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Class__c</fullName>
    <label>Type of Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Elementary</fullName>
            </value>
            <value>
                <fullName>Junior High</fullName>
            </value>
            <value>
                <fullName>High School</fullName>
            </value>
            <value>
                <fullName>GED Program</fullName>
            </value>
            <value>
                <fullName>Type III</fullName>
            </value>
            <value>
                <fullName>Vocational Training Program</fullName>
            </value>
            <value>
                <fullName>Special Education</fullName>
            </value>
            <value>
                <fullName>College</fullName>
            </value>
            <value>
                <fullName>Internship/Apprenticeship</fullName>
            </value>
            <value>
                <fullName>Not in School</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Infant &amp; Toddler Programs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>