force-app/main/default/objects/Education__c/fields/Will_child_be_attending_Summer_School__c.field-meta.xml
<CustomField>
    <fullName>Will_child_be_attending_Summer_School__c</fullName>
    <label>Will child be attending Summer School</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>